tempfile/derive_more/tests/compile_fail/as_ref/unknown_struct_attr_arg.rs
#[derive(derive_more::AsRef)]
#[as_ref(baz)]
struct Foo {
    bar: i32,
}

fn main() {}
